fix: details on mobile

--- a/pages/style.css
+++ b/pages/style.css
@@ -1622,7 +1622,6 @@ p {
     /* article section */
 
     .article {
-        border: 1px dashed orange;
         height: 410px;
     }
 
